fixed bug where flipped medical timeline would have wrong z-index, covering nav bar

--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -304,9 +304,9 @@
   display: none;
 }
 .medical-timeline {
-  transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
+  transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
   display:none;
 }
 .flipped .medical-timeline {
